--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-      <a href="#book-a-table" class="book-a-table-btn scrollto d-none d-lg-flex">Start a Project</a>
+      <a href="#book-a-table" class="book-a-table-btn scrollto d-none d-lg-flex">Hire Met</a>
 
     </div>
   </header><!-- End Header -->
@@ -102,20 +102,18 @@
             </div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>Hey there,</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              I'm Bao. I'm a UX designer with a background in STEM academic disciplines. Here are what I learned during 24 weeks at the Georgia Tech Design Bootcamp: 
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="bi bi-check-circle"></i> Web and Visual design: Color, grid systems, compisition & balance, typography, and cotrast.</li>
+              <li><i class="bi bi-check-circle"></i> Design thinking: Emphasize, define, ideate, prototype, test, and iterate.</li>
+              <li><i class="bi bi-check-circle"></i> UI/UX related tools: Adobe XD, Figma, Invision, Miro, etc.</li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              I enjoy adjusting prototypes based on usability input so that end-users have a more enjoyable stramlione experience. I'm currently freelancing, and helping nonprofit organizations redesigning their websites. I enjoy researching, desinging, and learning more skills that are realted to my career.  
+
             </p>
           </div>
         </div>
@@ -137,8 +135,8 @@
           <div class="col-lg-4">
             <div class="box" data-aos="zoom-in" data-aos-delay="100">
               <span>01</span>
-              <h4>We have our users the best in mind </h4>
-              <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
+              <h4> User-Centric Design </h4>
+              <p>We have our users the best in mind.</p>
             </div>
           </div>
 
@@ -146,7 +144,7 @@
             <div class="box" data-aos="zoom-in" data-aos-delay="200">
               <span>02</span>
               <h4>We use embedded analytic tools </h4>
-              <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para dest</p>
+              <p>Google Analytics and Hotjar.</p>
             </div>
           </div>
 
@@ -154,7 +152,7 @@
             <div class="box" data-aos="zoom-in" data-aos-delay="300">
               <span>03</span>
               <h4> We don't stop until you are happy</h4>
-              <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
+              <p>Iterate, refine, and improve.</p>
             </div>
           </div>
 
