--- a/index.html
+++ b/index.html
@@ -173,17 +173,17 @@
         <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="menu-flters">
-              <li data-filter="*" class="filter-active">Educations</li>
-              <li data-filter=".filter-starters">Languages</li>
-              <li data-filter=".filter-salads">Skills</li>
-              <li data-filter=".filter-specialty">Tools</li>
+              <li data-filter="*" class="filter-edu">Educations</li>
+              <li data-filter=".filter-lang">Languages</li>
+              <li data-filter=".filter-skills">Skills</li>
+              <li data-filter=".filter-tools">Tools</li>
             </ul>
           </div>
         </div>
 
         <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div class="col-lg-6 menu-item filter-starters">
+          <div class="col-lg-6 menu-item filter-edu">
             <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">UI/UX Certificate</a><span>Georgia Tech</span>
@@ -193,7 +193,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-specialty">
+          <div class="col-lg-6 menu-item filter-edu">
             <img src="assets/img/menu/bread-barrel.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">B.S. Biochemistry</a><span>Georgia Gwinnett College</span>
@@ -203,7 +203,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-starters">
+          <div class="col-lg-6 menu-item filter-lang">
             <img src="assets/img/menu/cake.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">English</a><span>Preffered</span>
@@ -213,7 +213,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-salads">
+          <div class="col-lg-6 menu-item filter-lang">
             <img src="assets/img/menu/caesar.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Vietnamese</a><span>Fluent</span>
