--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
         </div>
 
         <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
-
+          <p>picss</p>
+<!--educations-->
           <div class="col-lg-6 menu-item filter-edu">
             <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
             <div class="menu-content">
@@ -202,7 +203,7 @@
               Cum Laude
             </div>
           </div>
-
+<!--languages-->
           <div class="col-lg-6 menu-item filter-lang">
             <img src="assets/img/menu/cake.jpg" class="menu-img" alt="">
             <div class="menu-content">
@@ -222,8 +223,8 @@
               Lorem, deren, trataro, filede, nerada
             </div>
           </div>
-
-          <div class="col-lg-6 menu-item filter-specialty">
+<!--skills-->
+          <div class="col-lg-6 menu-item filter-skills">
             <img src="assets/img/menu/tuscan-grilled.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Tuscan Grilled</a><span>$9.95</span>
@@ -233,7 +234,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-starters">
+          <div class="col-lg-6 menu-item filter-skills">
             <img src="assets/img/menu/mozzarella.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Mozzarella Stick</a><span>$4.95</span>
@@ -243,7 +244,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-salads">
+          <div class="col-lg-6 menu-item filter-skills">
             <img src="assets/img/menu/greek-salad.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Greek Salad</a><span>$9.95</span>
@@ -252,8 +253,8 @@
               Fresh spinach, crisp romaine, tomatoes, and Greek olives
             </div>
           </div>
-
-          <div class="col-lg-6 menu-item filter-salads">
+<!--tools-->
+          <div class="col-lg-6 menu-item filter-tools">
             <img src="assets/img/menu/spinach-salad.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Spinach Salad</a><span>$9.95</span>
@@ -263,7 +264,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-specialty">
+          <div class="col-lg-6 menu-item filter-tools">
             <img src="assets/img/menu/lobster-roll.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Lobster Roll</a><span>$12.95</span>
