--- a/index.html
+++ b/index.html
@@ -182,7 +182,14 @@
         </div>
 
         <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
-          <p>picss</p>
+         
+
+<!--resume pic-->
+<div class="col-lg-6 menu-item">
+  <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
+</div>
+
+</div>
 <!--educations-->
           <div class="col-lg-6 menu-item filter-edu">
             <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
