--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       </div>
     </section><!-- End Why Us Section -->
 
-    <!-- ======= Menu Section ======= -->
+    <!-- ======= Resume Section ======= -->
     <section id="menu" class="menu section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -183,7 +183,8 @@
 
         <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
          
-
+<div>
+          <p> testing </p>
 <!--educations-->
           <div class="col-lg-6 menu-item filter-edu">
             <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
@@ -355,7 +356,7 @@
               Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll
             </div>
           </div>
-
+</div>
         </div>
 
       </div>
