--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
         </div>
 
       </div>
-    </section><!-- End Why Us Section -->
+    </section>
+    <!-- End Why Us Section -->
 
     <!-- ======= Resume Section ======= -->
     <section id="menu" class="menu section-bg">
@@ -359,7 +360,49 @@
         </div>
 
       </div>
-    </section><!-- End Menu Section -->
+    </section>
+    <!-- End Menu Section -->
+
+        <!-- ======= project Section ======= -->
+
+    <section id="project-detail" class="project-detail">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Projects</h2>
+          <p>Some of my casestudy</p>
+        </div>
+
+
+
+          <div class="col-lg-4">
+            <div class="box" data-aos="zoom-in" data-aos-delay="100">
+              <span>01</span>
+              <h4> User-Centric Design </h4>
+              <p>We have our users the best in mind.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 mt-4 mt-lg-0">
+            <div class="box" data-aos="zoom-in" data-aos-delay="200">
+              <span>02</span>
+              <h4>We use embedded analytic tools </h4>
+              <p>Google Analytics and Hotjar.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 mt-4 mt-lg-0">
+            <div class="box" data-aos="zoom-in" data-aos-delay="300">
+              <span>03</span>
+              <h4> We don't stop until you are happy</h4>
+              <p>Iterate, refine, and improve.</p>
+            </div>
+          </div>
+
+
+
+      </div>
+    </section>
 
 
 
