--- a/index.html
+++ b/index.html
@@ -377,24 +377,24 @@
 
           <div class="col-lg-4">
             <div class="box" data-aos="zoom-in" data-aos-delay="100">
-              <span>01</span>
-              <h4> User-Centric Design </h4>
+              <span>UI/UX Design</span>
+              <h4> PawPup </h4>
               <p>We have our users the best in mind.</p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box" data-aos="zoom-in" data-aos-delay="200">
-              <span>02</span>
-              <h4>We use embedded analytic tools </h4>
+              <span>Responsive Website Development</span>
+              <h4>Gamming Hobby </h4>
               <p>Google Analytics and Hotjar.</p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box" data-aos="zoom-in" data-aos-delay="300">
-              <span>03</span>
-              <h4> We don't stop until you are happy</h4>
+              <span>UX Design</span>
+              <h4> PawPup</h4>
               <p>Iterate, refine, and improve.</p>
             </div>
           </div>
