--- a/index.html
+++ b/index.html
@@ -380,6 +380,18 @@
               <span>UI/UX Design</span>
               <h4> PawPup </h4>
               <p>We have our users the best in mind.</p>
+              <h5>The Challenge
+                <p>hello hello</p>
+              </h5>
+              <h5>Team
+                <p>hello hello</p>
+              </h5>
+              <h5>Poject Duration
+                <p>hello hello</p>
+              </h5>
+              <h5>Tools Used
+                <p>hello hello</p>
+              </h5>
             </div>
           </div>
 
