--- a/index.html
+++ b/index.html
@@ -374,22 +374,44 @@
         </div>
 
 
-
           <div class="col-lg-4">
             <div class="box" data-aos="zoom-in" data-aos-delay="100">
               <span>UI/UX Design</span>
               <h4> PawPup </h4>
               <p>We have our users the best in mind.</p>
+             
               <h5>The Challenge
                 <p>hello hello</p>
               </h5>
+
               <h5>Team
                 <p>hello hello</p>
               </h5>
+
               <h5>Poject Duration
                 <p>hello hello</p>
               </h5>
+
               <h5>Tools Used
+                <p>hello hello</p>
+              </h5>
+
+              <h5>Research
+                <p>hello hello</p>
+              </h5>
+              <h5>Definition
+                <p>hello hello</p>
+              </h5>
+              <h5>Ideation
+                <p>hello hello</p>
+              </h5>
+              <h5>Prototyping
+                <p>hello hello</p>
+              </h5>
+              <h5>Testing
+                <p>hello hello</p>
+              </h5>
+              <h5>Conclusion and Future Goals
                 <p>hello hello</p>
               </h5>
             </div>
